# z2p

./: .env  Cargo.toml  Dockerfile  configuration.yaml  db.env  docker-compose.yml  sqlx-data.json
configuration/: base.yaml
migrations/: 20221025180410_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
